# claude-2

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yml  weekly-report.yml
scripts/: gmail_oauth_setup.py  preview_report.py
src/: analyzer.py  budget_sheet.py  campaign_generator.py  config.py  drafts_writer.py  emailer.py  infinitydb_client.py  main.py  models.py  scraper.py
tests/: test_analyzer.py  test_budget_sheet.py  test_campaign_generator.py  test_drafts_writer.py  test_end_to_end.py  test_infinitydb_client.py
tests/fixtures/: actuals_2026-W16.json  budget_2026-W16.json
